force-app/main/default/objects/MaskedTarget__mdt/MaskedTarget__mdt.object-meta.xml
<CustomObject>
    <label>マスキング対象</label>
</CustomObject>