force-app/main/default/objects/MaskedTarget__mdt/fields/AccountRecordType__c.field-meta.xml
<CustomField>
    <fullName>AccountRecordType__c</fullName>
    <label>取引先レコードタイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>委託企業</fullName>
                <default>true</default>
                <label>委託企業</label>
            </value>
            <value>
                <fullName>不動産会社/家主</fullName>
            </value>
            <value>
                <fullName>引越業者</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>