force-app/main/default/objects/MaskedTarget__mdt/fields/KeyItemApiName__c.field-meta.xml
<CustomField>
    <fullName>KeyItemApiName__c</fullName>
    <label>キー項目API名</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>