force-app/main/default/objects/MaskedTarget__mdt/fields/SObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>SObjectApiName__c</fullName>
    <label>オブジェクトAPI名</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>